fix(mcp-marketplace): use Java 8 URL encoding API
RegistryMarketplaceClient.buildPageUrl used URLEncoder.encode(String, Charset) — a Java 9+
overload that broke the Java 8 build/GitHub Action. Switch to the Java-8 URLEncoder.encode(
String, String) charset-name form (StandardCharsets.UTF_8.name()); it declares the checked
UnsupportedEncodingException, so buildPageUrl now declares throws IOException (loadEntries
already does). Added RegistryMarketplaceClientTest covering a cursor with reserved/non-ASCII
characters ("page 2+/ä" -> page+2%2B%2F%C3%A4) and cursor omission. Repo-wide check: this was
the only Java-9+ URLEncoder/URLDecoder charset-overload call.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>